--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <span id="minutes"></span>:<span id="seconds"></span>
 <br>
 <button onclick="startTimer()">Start</button>
-<button onclick="reStart()">ReStart</button>
+<button onclick="reStart()">Restart</button>
 <br>
 <h1 > :<span id="ballCount">20</span></h1>
     <script src="app.js"></script>
